--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -140,7 +140,7 @@ nav li{
 /* end */
 
 /* Step-06 */
-.img-icon{
+.image-icon {
     display: flex;
     justify-content: space-between;
     margin: auto;
